--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: broadway-normal;
+  src: url(../fonts/broadway-normal.ttf);
+}
 *{
   margin: 0;
   padding: 0;
@@ -5,10 +9,8 @@
 body{
   width: 100%;
   height: 100%;
-  min-width: 900px;
-  background-image: url(../images/patente.jpeg);
+  background-image: url(../images/body1.png);
   background-repeat: repeat;
-  background-size: cover;
   background-attachment: fixed;
 }
 header{
@@ -16,51 +18,68 @@ header{
   z-index: 1;
   width: 100%;
   padding: 10px;
-  background-color: #ff8030;
+  background-image: url(../images/header.jpg);
+  background-size: cover;
   border-top: solid 3px #ffffff;
   border-bottom: solid 3px #ffffff;
   display: flex;
-  justify-content: space-between;
 }
 .logo-nombre{
-  width: 55%;
+  width: 50%;
 }
 h1#titulo{
   color: white;
-  font-family: 'Gravitas One', cursive;
+  font-family: broadway-normal, cursive;
   text-shadow: 7px 1px 8px rgba(76, 76, 76, 0.54);
-  letter-spacing: 15px;
-  position: relative;
-  left: 25px;
+  letter-spacing: 8px;
+  padding-left: 25px;
 }
 nav{
-  width: 45%;
+  width: 50%;
   align-self: center;
 }
 .menu{
-  list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .menu li{
-  color: black;
+  list-style: none;
   font-family: 'Lobster', cursive;
   font-size: 23px;
   letter-spacing: 1px;
 }
 .menu a{
-  color: black;
   text-decoration: none;
+  color:#ffffff;
+  display:block;
 }
 .menu a:hover{
-  color: yellow;
+  color: #c6bbaf;
+}
+.sub-menu {
+  display:none;
+  position:absolute;
+  background-color: rgba(171, 1, 50, 0.6);
+  padding: 5px;
+  padding-right: 40px;
+  padding-left: 5px;
+  border-radius: 4px;
+}
+.sub-menu li{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  position: relative;
+  left: 5px;
+}
+.menu li:hover > .sub-menu {
+  display: block;
 }
 main{
-  padding-top: 71px;
+  padding-top: 65px;
   background-color: white;
   width: 85%;
   margin: auto;
-  box-shadow: 0px 0px 100px 20px rgba(158, 158, 158, 0.8);
+  box-shadow: 0px 0px 100px 20px rgba(136, 135, 135, 0.7);
 }
 .foto1{
   width: 99%;
@@ -81,6 +100,7 @@ hr{
   font-family: 'Cinzel Decorative', cursive;
   width: 40%;
   margin: auto;
+  margin-bottom: 30px;
   position: relative;
   top: 20px;
   padding: 6px;
@@ -89,6 +109,11 @@ hr{
 .caja3{
   background-image: url(../images/linedpaper.png);
   padding-bottom: 40px;
+}
+.articulos img{
+  display: block;
+  width: 90%;
+  margin: auto;
 }
 h3{
   text-align: center;
@@ -105,66 +130,162 @@ h5{
   padding-top: 40px;
 }
 footer{
-  background-color: #ff8030;
+  width: 100%;
+  background-image: url(../images/footer.jpg);
+  background-size: cover;
   border-top: solid 3px #ffffff;
   border-bottom: solid 3px #ffffff;
 }
 footer h1{
   text-align: center;
+  color: white;
+  font-family: broadway-normal, cursive;
+  text-shadow: 7px 1px 8px rgba(76, 76, 76, 0.54);
+  letter-spacing: 8px;
 }
-#header {
-				margin:auto;
-				width:500px;
-				/*font-family:Arial, Helvetica, sans-serif;*/
-			}
 
-			ul, ol {
-				list-style:none;
-			}
+.modalAccede {
+  display: none;
+  background-color: rgba(37, 37, 37, 0.75);
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  display: none;
 
-			.menu > li {
-				float:left;
-			}
-
-			.menu li a {
-				/*background-color:#000;*/
-				color:#000;
-				/*text-decoration:none;*/
-				/*padding:10px 12px;*/
-				display:block;
-			}
-
-			.menu li a:hover {
-				/*background-color:#434343;*/
-			}
-
-			.menu li ul {
-				display:none;
-				position:absolute;
-				/*min-width:140px;*/
-			}
-
-			.menu li:hover > ul {
-				display:block;
-			}
-
-			.menu li ul li {
-				position:relative;
-			}
-
-			.menu li ul li ul {
-				/*right:-140px;
-        top:0px;*/
-			}
-
-.camisas li {
-  position: relative;
-  left: 122px;
-  bottom: 30px;
 }
-.menu ul {
-  background-color: orange;
+.contenidoAccede{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(254, 115, 48);
+  padding: 20px;
+  border-radius: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
-.menu ul ul li {
-  color: yellow;
+.contenidoAccede h3{
+  font-size: 25px;
+}
+.campoUsuario{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+#aceptar{
+  margin-top: 20px;
+}
+.modal-abrigo-invierno {
+  background-color: rgba(37, 37, 37, 0.75);
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  display: none;
+}
+.contenidoModal{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  min-width: 450px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+}
+.contenidoModal h3{
+  font-size: 23px;
+
+}
+.contenidoModal #imagenPrenda{
+  width: 60%;
+  margin: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.contenidoModal #descripcion{
+  text-align: center;
+}
+.contenidoModal h5{
+  font-size: 20px;
+  padding-top: 8px;
+  padding-bottom: 12px;
+}
+.contenidoModal #comprar{
+  width: 30%;
+  margin: auto;
+  padding: 10px;
+}
+.abrir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.boton-cerrar {
+  align-self: flex-end;
+  border: 0px;
+  background-color: inherit;
+}
+.aspa {
+  width: 40px;
+}
+@media (max-width: 1000px){
+
+  main{
+    width: 100%;
+  }
+  .menu li{
+    font-size: 18px;
+  }
+  h1#titulo{
+    font-size: 30px;
+  }
+  .articulos img{
+    display: block;
+    width: 80%;
+    margin: auto;
+  }
+  .contenidoModal{
+    min-width: 450px;
+  }
+  .contenidoModal #imagenPrenda{
+    height: 360;
+  }
+}
+@media (max-width: 780px){
+  .logo-nombre{
+    width: 45%;
+  }
+  nav{
+    width: 55%;
+  }
+  h1#titulo{
+    font-size: 28px;
+    letter-spacing: 5px;
+  }
+  .contenidoModal{
+    min-width: 370px;
+  }
+}
+@media (max-width: 640px){
+  body{
+    min-width: 640px;
+  }
+  header{
+    min-width: 640px;
+  }
+  h1#titulo{
+    font-size: 28px;
+    letter-spacing: 5px;
+  }
+  h2{
+    font-size: 22px;
+  }
+  .menu li{
+    font-size: 15px;
+  }
+  .articulos img{
+    display: block;
+    width: 70%;
+    margin: auto;
+  }
 }
